--- a/lpc2022-new-design-for-initrds.tex
+++ b/lpc2022-new-design-for-initrds.tex
@@ -23,7 +23,7 @@
 \newcommand{\pulldone}[3]{\pull{#1}{#2}{#3} \done}
 \newcommand{\commit}[3]{\href{https://github.com/systemd/#1/commit/#2}{#3 (#2)}}
 \newcommand{\commitdone}[3]{\commit{#1}{#2}{#3} \done}
-% \newcommand\pp\pause
+%\newcommand\pp\pause
 \newcommand\pp{}
 
 
@@ -210,7 +210,7 @@
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{Digression: mkosi}
+  \frametitle{mkosi — introduction}
 
   \url{https://github.com/systemd/mkosi}
 
@@ -298,14 +298,14 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Boot loader integration}
+%% \begin{frame}
+%%   \frametitle{Boot loader integration}
 
-  Credentials and sysexts are loaded by systemd-stub.\\
-  Loading \texttt{should} work with any boot loader.
+%%   Credentials and sysexts are loaded by systemd-stub.\\
+%%   Loading \texttt{should} work with any boot loader.
 
-  % \quad
-\end{frame}
+%%   % \quad
+%% \end{frame}
 
 \begin{frame}[fragile]
   \frametitle{Links}
