--- a/lpc2022-new-design-for-initrds.tex
+++ b/lpc2022-new-design-for-initrds.tex
@@ -23,8 +23,8 @@
 \newcommand{\pulldone}[3]{\pull{#1}{#2}{#3} \done}
 \newcommand{\commit}[3]{\href{https://github.com/systemd/#1/commit/#2}{#3 (#2)}}
 \newcommand{\commitdone}[3]{\commit{#1}{#2}{#3} \done}
-%\newcommand\pp\pause
-\newcommand\pp{}
+\newcommand\pp\pause
+%\newcommand\pp{}
 
 
 \title{\textsc{New design for initrds}}
